Fix IG-1876,1879 [General] Monaco editor issues (see description) (#166)
IG-1876 [Browse] Monaco editor doesn't edit correct with one row file
IG-1879 [General] Fix horizontal scrollbar in monaco editor

--- a/src/nuclio/common/components/monaco/monaco.less
+++ b/src/nuclio/common/components/monaco/monaco.less
@@ -1,13 +1,17 @@
 .ncl-monaco {
-    > div {
+    .ncl-monaco-wrapper {
+        padding-top: 20px;
         height: 100%;
         border: 1px solid @ncl-pale-grey;
+        background-color: @ncl-white;
+
+        > div {
+            height: 100%;
+        }
     }
 
-    .monaco-editor {
-        .margin, .overflow-guard {
-            padding-top: 20px;
-        }
+    .ncl-monaco-dark {
+        background-color: @vs-dark;
     }
 }
 
